<resources>
    <string name="app_name">Vega-Café</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="fraseIntro">"Un café aromático, un delicioso bocata o una pizza recién horneada, encuéntralo todo aquí."</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrase_a_olvidada">¿Contraseña Olvidada?</string>
    <string name="detail_infoTxt">Información</string>
    <string name="detail_cantTxt">Cantidad</string>
    <string name="detail_addTxt">Añadir</string>
    <string name="detail_totalPriceTxt">Precio Total</string>
    <string name="login_newAppTxt">¿Nuevo en la app?</string>
    <string name="login_registerTxt">Registrate</string>
    <string name="register_nameHintTxt">Nombre</string>
    <string name="register_apellidoHintTxt">Apellidos</string>
    <string name="register_passRepeatHintTxt">Repetir Contraseña</string>
    <string name="register_yaRegistHintTxt">¿Ya estás registrado?</string>
    <string name="cart_emptyTxt">Su carrito está vacío</string>
    <string name="cart_pedidoTxt">Pedido</string>
    <string name="cart_resumenTxt">Resumen del Pedido</string>
    <string name="cart_subtotalTxt">Subtotal</string>
    <string name="cart_totalTaxTxt">Total Impuestos</string>
    <string name="cart_finPedidoTxt">Finalizar Pedido</string>
    <string name="cart_totalTxt">Total</string>
    <string name="home_bienvenidaTxt">Bienvenido</string>
    <string name="home_buscarTxt">Buscar...</string>
    <string name="home_masVendidosTxt">Top Ventas</string>
    <string name="home_verTodoTxt">VER TODO</string>
    <string name="home_categoryTxt">Categorias</string>
    <string name="editPerfilTxt">Editar Perfil</string>
    <string name="passEditTxt">Editar Contraseña</string>
    <string name="profile_idiomaTxt">Cambiar Idioma</string>
    <string name="profile_stocksTxt">Control de Stocks</string>
    <string name="profile_versionTxt">Versión BETA</string>
    <string name="verify_verifyTxt">Verifique su Email para Continuar</string>
    <string name="aceptButtonTxt">Aceptar</string>
    <string name="popIdioma_escogeIdiomaTxt">Escoge idioma</string>
    <string name="cancelButtonTxt">Cancelar</string>
    <string name="popupIdioma_espanolTxt">Español</string>
    <string name="popupIdioma_inglesTxt">English</string>
    <string name="popupPass_passActualHint">Contraseña Actual</string>
    <string name="popupPass_passNuevaHint">Nueva Contraseña</string>
    <string name="popupPass_passRepiteHint">Confirmar Contraseña</string>
    <string name="popupPerfil_relleneCamposTxt">Rellene solo los campos que desee modificar</string>
    <string name="popupPerfil_nombreTxt">Cambiar Nombre</string>
    <string name="popupPerfil_apellidoTxt">Cambiar Apellidos</string>
    <string name="popupPerfil_emailTxt">Cambiar Email</string>
    <string name="popupPerfil_passActTxt">Introduzca su contraseña para poder confirmar</string>
    <string name="registrateConEspacioAntes">" Registrate"</string>
</resources>