<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:srcCompat="@drawable/logo"
                tools:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vega"
                    android:layout_marginEnd="8dp"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Café"
                    android:textColor="@color/blue"
                    android:textSize="45sp"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/userEdt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/correo_electr_nico"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/blue"

                android:textColorHint="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/passwrdEdt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"

                android:textSize="14sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/forgotPassTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contrase_a_olvidada"
                android:textSize="16sp"
                android:layout_marginTop="32dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/blue"

                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesi_n"
                android:background="@drawable/red_button_background"
                android:layout_margin="32dp"
                style="@android:style/Widget.Button"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                android:translationY="-25sp">

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="O"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    />

                <View
                    android:id="@+id/view3"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:translationY="-25sp">

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/google"
                    tools:srcCompat="@drawable/google" />

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/facebook"
                    tools:srcCompat="@drawable/facebook" />

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/twitter"
                    tools:srcCompat="@drawable/twitter" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:translationY="-15sp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_newAppTxt"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/registTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrateConEspacioAntes"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>